<?xml version="1.0" encoding="utf-8"?>



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    tools:context="com.bachelor.degree.travel.app.AttractionActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:src="@drawable/castels" />
        <ImageView
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/museums" />
        <ImageView
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/monuments" />
        <ImageView
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/monastery" />
        <ImageView
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:src="@drawable/natural" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp">
        <Button
            android:id="@+id/castelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/castels"/>
        <Button
            android:id="@+id/museumBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/museums"/>
        <Button
            android:id="@+id/monumentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monuments"/>
        <Button
            android:id="@+id/monasteryBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monasteries"/>
        <Button
            android:id="@+id/naturalBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/natural_peisage"/>
    </LinearLayout>

</LinearLayout>
