<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:background="@color/bg_fragment"
        android:id="@+id/frame2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:src="@drawable/things" />
            <Button
                android:id="@+id/attractions_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:layout_marginLeft="10dp"
                android:text="@string/atractions" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:src="@drawable/restaurant_png" />
            <Button
                android:id="@+id/restaurants_btn"
                android:layout_width="wrap_content"
                android:ems="8"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/restaurants"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:src="@drawable/hotel_icon" />
            <Button
                android:id="@+id/hotels_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:layout_marginLeft="10dp"
                android:text="@string/hotels"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:src="@drawable/trans" />
            <Button
                android:id="@+id/transport_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:layout_marginLeft="10dp"
                android:text="@string/transport"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
