<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:background="@color/bg_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/frame1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:src="@drawable/blue_arrow" />
            <Button
                android:id="@+id/near_me_now_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:layout_marginLeft="10dp"
                android:text="@string/near_me_now"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:src="@drawable/account" />
            <Button
                android:id="@+id/details_account_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:layout_marginLeft="10dp"
                android:text="@string/details_account"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:src="@drawable/wheel" />
            <Button
                android:id="@+id/system_info_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:layout_marginLeft="10dp"
                android:text="@string/system_info"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
