<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.bachelor.degree.travel.app.DetailsAccountActivity">

            <TextView
                android:id="@+id/titleDetailsAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dip"
                android:text="@string/welcome"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/activateBackupBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleDetailsAccount"
                android:layout_marginTop="30dip"
                android:background="@color/grayOpen"
                android:text="@string/activate_backup"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activateBackupBtn"
                android:layout_marginTop="20dip"
                android:background="@color/grayOpen"
                android:text="@string/log_out"
                android:textSize="15sp" />
        </RelativeLayout>
    </LinearLayout>

    <include layout="@layout/navigation_view" />
</android.support.v4.widget.DrawerLayout>