<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.bachelor.degree.travel.app.NearMeNowActivity">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/near_me_now"
                android:textSize="30sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_below="@+id/textViewTitle"
                android:layout_marginTop="10dp"
                android:weightSum="1">

                <RadioButton
                    android:id="@+id/idMapGoogle"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_gravity="center_horizontal"
                    android:checked="false"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/map"
                    android:textSize="25sp" />

                <RadioButton
                    android:id="@+id/idText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.13"
                    android:checked="false"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/text"
                    android:textSize="25sp" />
            </RadioGroup>

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/mapGoogleNearMeNow"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@id/radioGroup"
                android:layout_marginTop="10dp" />
        </RelativeLayout>
    </LinearLayout>

    <include layout="@layout/navigation_view" />
</android.support.v4.widget.DrawerLayout>