<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/idscrollView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.bachelor.degree.travel.app.CastelActivity">

                <LinearLayout
                    android:id="@+id/titleLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/castleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/castel_title"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imgAttraction"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_marginLeft="80dp"
                        android:src="@drawable/camera"
                        tools:ignore="RtlHardcoded" />
                </LinearLayout>

                <fragment
                    android:id="@+id/myLocation"
                    android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/titleLayout"
                    android:hint="@string/enter_location"
                    android:inputType="textMultiLine" />

                <TextView
                    android:id="@+id/msgSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/myLocation"
                    android:layout_marginTop="2dip"
                    android:text="@string/choose_an_attraction_type_below"
                    android:textSize="15sp" />

                <Spinner
                    android:id="@+id/typeAttraction"
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:layout_below="@id/msgSpinner"
                    android:layout_marginTop="5dip"
                    android:spinnerMode="dropdown" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/typeAttraction" />

                <TextView
                    android:id="@+id/idTextMap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/address"
                    android:layout_marginBottom="3dip"
                    android:text="@string/tap_on_map_a_location_and_see_below_sugestions"
                    android:textSize="15sp" />

                <FrameLayout
                    android:id="@+id/frame"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_below="@id/idTextMap">

                    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:tools="http://schemas.android.com/tools"
                        android:id="@+id/mapGoogle"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <ImageView
                        android:id="@+id/transparent_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent" />
                </FrameLayout>

                <TextView
                    android:id="@+id/sugesstions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/frame"
                    android:layout_marginBottom="5dip"
                    android:layout_marginTop="10dp"
                    android:text="@string/sugestions"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <HorizontalScrollView
                    android:id="@+id/horizontalViewAttraction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sugesstions"
                    android:layout_marginTop="5dip"
                    android:scrollbars="horizontal|vertical">

                    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/table_attractions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TableLayout>
                </HorizontalScrollView>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>

    <include layout="@layout/navigation_view" />
</android.support.v4.widget.DrawerLayout>

